--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,8 +3,10 @@
   <h1>
     Welcome to {{ title }}!
   </h1>
+  <app-header></app-header>
   <app-carousel></app-carousel>
   <app-product></app-product>
+  <app-footer></app-footer>
 </div>
 
 
