--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,6 @@
-@import "../node_modules/bootswatch/dist/Cerulean/variables";
+@import "./variables";
 @import "../node_modules/bootstrap/scss/bootstrap";
 @import "../node_modules/bootswatch/dist/Cerulean/bootswatch";
-
 
 .custom-day {
   text-align: center;
