--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,10 +1,13 @@
 <footer style="background-color: lightgrey; color:black">
-  <div style="text-align: center">Holistic Medical Services</div>
-  <div style="text-align: center">Tuxedo Atrium</div>
-  <div style="text-align: center">3833 Roswell Rd. NE, Suite 116</div>
-  <div style="text-align: center">Atlanta, GA 30342</div>
+  <div style="text-align: center">{{name}}</div>
+  <div *ngIf='address1 && address1.length > 0' style="text-align: center">{{address1}}</div>
+  <div *ngIf='address2 && address2.length > 0' style="text-align: center">{{address2}}</div>
+  <div *ngIf='city_state_zip.length > 3' style="text-align: center">{{city_state_zip}}</div>
+
+
   <div style="text-align: center">
-    <a href='tel:404.941.8621'>Contact: 404.941.8621</a>
+    <a href='tel:{{phone}}'>Contact: {{phone}}</a>
+    <a *ngIf='fax && fax.length > 0' href='tel:{{fax}}'> | Contact: {{fax}}</a>
   </div>
   <div class='col-lg-6'>
     <p>&copy; 2018 - R & R Engineering, LLC</p>
