--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,5 @@
 <div class='row'>
-  <div class="col-md-4 logo">
+  <div class="col-md-4 logo offset-md-4" >
     <img src='../../../assets/logo.png'>
   </div>
 </div>
