messing with Jason

--- a/src/app/carousel/carousel/carousel.component.html
+++ b/src/app/carousel/carousel/carousel.component.html
@@ -1,22 +1,22 @@
 <ngb-carousel>
   <ng-template ngbSlide>
-    <img src="assets/Generic1.jpg" style="max-height: 400px; width: auto;" alt="Random first slide">
+    <img src="assets/Generic4.jpg" style="max-height: 400px; width: auto;" alt="Random first slide">
     <div class="carousel-caption">
-      <h3>First slide label</h3>
-      <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+      <h3>Not Our Idea of Paddling</h3>
+      <p>This is NOT what we are about.</p>
     </div>
   </ng-template>
   <ng-template ngbSlide>
     <img src="assets/Generic2.jpg" style="max-height: 400px; width: auto;" alt="Random first slide">
     <div class="carousel-caption">
-      <h3>Second slide label</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+      <h3>Our Idea of Paddling</h3>
+      <p></p>
     </div>
   </ng-template>
   <ng-template ngbSlide>
     <img src="assets/Generic3.jpg" style="max-height: 400px; width: auto;" alt="Random first slide">
     <div class="carousel-caption">
-      <h3>Third slide label</h3>
+      <h3>Out Idea of Paddling</h3>
       <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
     </div>
   </ng-template>
