--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,5 @@
 <div class='row'>
-  <div class="col-md-4 logo offset-md-4 title"> Up A Creek
+  <div class="col-md-4 logo offset-md-4 title"> {{name}}
   </div>
 </div>
 
