--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div style="text-align:center">
+<div class="container" style="text-align:center">
   <app-header></app-header>
   <app-carousel></app-carousel>
   <app-product></app-product>
