--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -80,6 +80,6 @@
           </li>
       </ul>
     </div>
-    <app-basket-status *ngIf='authenticated'></app-basket-status>
+    <app-basket-status></app-basket-status>
   </nav>
 </header>
