--- a/src/styles.scss
+++ b/src/styles.scss
@@ -34,3 +34,11 @@
         url('assets/ar-christy.ttf') format('truetype'), /* Opera, Safari */
         url('assets/ar-christy.svg#font') format('svg'); /* iOS */
 }
+
+.carousel-control {
+  color: black;
+}
+
+.glyphicon.glyphicon-chevron-right{
+  color:red;
+}
